--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -24,3 +24,11 @@
         box-shadow: none;
     }
 }
+
+.btn-primary {
+    --btn-color: var(--body-color);
+    --btn-bg: rgba(237,228,244,1);
+    --btn-box-shadow: 0 6px 0 0 #{darken(rgba(237,228,244,1), 20%)};
+    --btn-hover-box-shadow: 0 9px 0 0 #{darken(rgba(237,228,244,1), 20%)};
+    --btn-active-box-shadow: 0 9px 0 0 #{darken(rgba(237,228,244,1), 20%)};
+}
