Set current page as active in the navbar

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -24,7 +24,8 @@
             transition: width .25s ease-in-out;
         }
     
-        &:hover::before {
+        &:hover::before,
+        &.active::before {
             width: 100%;
         }
     }
