--- a/src/css/style.css
+++ b/src/css/style.css
@@ -314,6 +314,14 @@ strong {
   box-shadow: none;
 }
 
+.btn-primary {
+  --btn-color: var(--body-color);
+  --btn-bg: rgba(237,228,244,1);
+  --btn-box-shadow: 0 6px 0 0 #bd9cd6;
+  --btn-hover-box-shadow: 0 9px 0 0 #bd9cd6;
+  --btn-active-box-shadow: 0 9px 0 0 #bd9cd6;
+}
+
 .container {
   padding-inline: var(--container-padding-x);
   margin: 0 auto;
@@ -394,7 +402,7 @@ textarea.form-control {
   background-color: var(--body-color);
   transition: width 0.25s ease-in-out;
 }
-.navbar .nav-item:hover::before {
+.navbar .nav-item:hover::before, .navbar .nav-item.active::before {
   width: 100%;
 }
 
@@ -413,13 +421,6 @@ textarea.form-control {
 
 .project-sango .header {
   background: linear-gradient(180deg, rgb(126, 180, 243) 6%, rgb(237, 228, 244) 55%, rgb(250, 250, 240) 63%);
-}
-.project-sango .btn-primary {
-  --btn-color: var(--body-color);
-  --btn-bg: rgba(237,228,244,1);
-  --btn-box-shadow: 0 6px 0 0 #bd9cd6;
-  --btn-hover-box-shadow: 0 9px 0 0 #bd9cd6;
-  --btn-active-box-shadow: 0 9px 0 0 #bd9cd6;
 }
 
 .findings {
