--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,7 +14,10 @@
   --btn-height: 3.5rem;
   --btn-padding-x: 1.25rem;
   --btn-padding-y: .5rem;
+  --btn-font-size: 1.25rem;
   --btn-font-weight: 600;
+  --btn-border-width: 0;
+  --btn-border-color: transparent;
   --btn-border-radius: 12px;
   --btn-transition: transform .25s ease-in-out, box-shadow .25s ease-in-out;
   --container-padding-x: 3.75rem;
@@ -296,13 +299,16 @@ strong {
   height: var(--btn-height);
   padding: var(--btn-padding-y) var(--btn-padding-x);
   font-family: var(--btn-font-family);
+  font-size: var(--btn-font-size);
   font-weight: var(--btn-font-weight);
   color: var(--btn-color);
   text-align: center;
+  border: var(--btn-border-width) solid var(--btn-border-color);
   border-radius: var(--btn-border-radius);
   background-color: var(--btn-bg, transparent);
   white-space: nowrap;
   box-shadow: var(--btn-box-shadow);
+  cursor: pointer;
   transition: var(--btn-transition);
 }
 .btn:hover {
