--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -18,7 +18,10 @@
     --btn-height: 3.5rem;
     --btn-padding-x: 1.25rem;
     --btn-padding-y: .5rem;
+    --btn-font-size: 1.25rem;
     --btn-font-weight: 600;
+    --btn-border-width: 0;
+    --btn-border-color: transparent;
     --btn-border-radius: 12px;
     --btn-transition: transform .25s ease-in-out, box-shadow .25s ease-in-out;
     --container-padding-x: 3.75rem;
