--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -14,6 +14,12 @@
     position: absolute;
     left: 50%;
     bottom: 100px;
+    display: grid;
+    place-items: center;
+    width: 4.5rem;
+    height: 4.5rem;
+    background-color: var(--body-color);
+    border-radius: 50rem;
     transform: translateX(-50%);
 }
 
