--- a/src/scss/pages/_project.scss
+++ b/src/scss/pages/_project.scss
@@ -23,6 +23,12 @@
     }
 }
 
+.project-cakeseable {
+    .header {
+        background: linear-gradient(180deg, #FBC8DD 6%, #F2E6ED 34.6%, #FAFAF0 63.1%);
+    }
+}
+
 .image-description-img {
     max-width: 562px;
 }
