--- a/src/scss/helpers/_utilities.scss
+++ b/src/scss/helpers/_utilities.scss
@@ -98,12 +98,24 @@
     row-gap: 7.75rem;
 }
 
+.w-50 {
+    width: 50%;
+}
+
 .w-100 {
     width: 100%;
 }
 
 .mt-3 {
     margin-top: 2.5rem;
+}
+
+.mt-6 {
+    margin-top: 5rem;
+}
+
+.mt-7 {
+    margin-top: 7.75rem;
 }
 
 .mb-0 {
