--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -30,10 +30,14 @@
     text-decoration: none;
 
     .person-job {
-        opacity: 0;
-        font-size: .875rem;
-        transform: translateX(-10%);
-        transition: opacity .25s ease-in-out, transform .25s ease-in-out;
+        display: none;
+        
+        @media screen and (min-width: 1063px) {
+            opacity: 0;
+            font-size: .875rem;
+            transform: translateX(-10%);
+            transition: opacity .25s ease-in-out, transform .25s ease-in-out;
+        }
     }
 
     &:hover .person-job {
