--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -4,12 +4,17 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    font-size: var(--body-font-size);
+    font-size: 1rem;
     font-weight: 500;
     font-style: normal;
     color: var(--body-color);
     line-height: 1.5;
     background-color: var(--body-bg);
+
+    @media screen and (min-width: 1063px) {
+        font-size: var(--body-font-size);
+        font-weight: 600;
+    }
 }
 
 h1,
@@ -25,14 +30,24 @@ h6 {
 
 h1,
 .h1 {
-    font-size: var(--h1-font-size);
-    line-height: 1.15;
+    font-size: var(--h5-font-size);
+    line-height: 1.5;
+    
+    @media screen and (min-width: 1063px) {
+        font-size: var(--h1-font-size);
+        line-height: 1.15;
+    }
 }
 
 h2,
 .h2 {
-    font-size: var(--h2-font-size);
-    line-height: 1.15;
+    font-size: 1.75rem;
+    line-height: 1.5;
+
+    @media screen and (min-width: 1063px) {
+        font-size: var(--h1-font-size);
+        line-height: 1.15;
+    }
 }
 
 h3,
@@ -47,14 +62,15 @@ h4,
     line-height: 1.15;
 }
 
-h5 {
-    margin-bottom: .75rem;
-}
-
 h5,
 .h5 {
-    font-size: var(--h5-font-size);
-    line-height: 1.15;
+    font-size: .875rem;
+    line-height: 1.5;
+
+    @media screen and (min-width: 1063px) {
+        font-size: var(--h5-font-size);
+        line-height: 1.15;
+    }
 }
 
 p {
