--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -7,6 +7,10 @@
     margin: 0 auto;
     width: 100%;
     max-width: var(--container-max-width);
+
+    @media screen and (min-width: 1063px) {
+        --container-padding-x: 3.75rem
+    }
 }
 
 .container-xl {
