--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -9,6 +9,10 @@
 }
 
 .nav-item {
-    font-size: .875rem;
+    font-size: .75rem;
     color: inherit;
+
+    @media screen and (min-width: 1063px) {
+        font-size: .875rem;
+    }
 }
