--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -24,7 +24,7 @@
     --btn-border-color: transparent;
     --btn-border-radius: 12px;
     --btn-transition: transform .25s ease-in-out, box-shadow .25s ease-in-out;
-    --container-padding-x: 3.75rem;
+    --container-padding-x: 1.125rem;
     --container-max-width: 1540px;
     --input-padding-y: .75rem;
     --input-font-size: 1.25rem;
@@ -34,7 +34,7 @@
     --input-border-width: 1px;
     --input-border-color: var(--body-color);
     --navbar-zindex: 1010;
-    --navbar-height: 8.125rem;
-    --navbar-bg: transparent;
+    --navbar-height: 5.9375rem;
+    --navbar-bg: #ad9cf4;
     --paragraph-margin-bottom: 1.875rem;
 }
