--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,37 +1,63 @@
 .header {
     position: relative;
-    display: flex;
-    place-items: center;
+    padding-top: 1.75rem;
+    padding-bottom: 5.9375rem;
+    margin-bottom: 1rem;
     background-color: var(--color-primary);
-    height: 100vh;
+    
+    @media screen and (min-width: 1063px) {
+        display: flex;
+        place-items: center;
+        height: 100vh;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
 }
 
 .header-home {
-    background: linear-gradient(180deg, rgba(173,156,244,1) 17%, rgba(197,152,255,1) 48%, rgba(250,250,240,1) 100%);
+    background: linear-gradient(180deg, #AD9CF4 17%, #C598FF 48%, #FAFAF0 100%);
 }
 
 .scroll-down {
     position: absolute;
     left: 50%;
-    bottom: 100px;
+    bottom: 1.5rem;
     display: grid;
     place-items: center;
-    width: 4.5rem;
-    height: 4.5rem;
+    width: 1.75rem;
+    height: 1.75rem;
     background-color: var(--body-color);
     border-radius: 50rem;
     transform: translateX(-50%);
+
+    @media screen and (min-width: 1063px) {
+        bottom: 100px;
+        width: 4.5rem;
+        height: 4.5rem;
+    }
+}
+
+.scroll-down-icon {
+    width: 1rem;
+    height: 1rem;
 }
 
 .person-name {
     display: flex;
+    justify-content: center;
     align-items: center;
+    flex-basis: 100%;
     column-gap: 1rem;
     text-decoration: none;
 
+    @media screen and (min-width: 1063px) {
+        justify-content: start;
+        flex-basis: auto;
+    }
+
     .person-job {
         display: none;
-        
+
         @media screen and (min-width: 1063px) {
             opacity: 0;
             font-size: .875rem;
