--- a/src/scss/helpers/_utilities.scss
+++ b/src/scss/helpers/_utilities.scss
@@ -26,6 +26,16 @@
     display: grid;
 }
 
+.d-none {
+    display: none;
+}
+
+.d-md-block {
+    @media screen and (min-width: 1063px) {
+        display: block;
+    }
+}
+
 .justify-content-center {
     justify-content: center;
 }
@@ -42,6 +52,10 @@
 
 .align-items-center {
     align-items: center;
+}
+
+.align-self-start {
+    align-self: start;
 }
 
 .flex-1 {
@@ -102,8 +116,16 @@
     gap: 4.125rem;
 }
 
+.gap-7 {
+    gap: 7.75rem;
+}
+
 .column-gap-3 {
     column-gap: 2.5rem;
+}
+
+.column-gap-5 {
+    column-gap: 4.125rem;
 }
 
 .column-gap-7 {
@@ -112,6 +134,10 @@
 
 .row-gap-2 {
     row-gap: 1.25rem;
+}
+
+.row-gap-2-5 {
+    row-gap: 1.75rem;
 }
 
 .row-gap-7 {
@@ -146,16 +172,38 @@
     margin-bottom: .75rem;
 }
 
+.mb-lg-1 {
+    @media screen and (min-width: 1063px) {
+        margin-bottom: .75rem;
+    }
+}
+
 .mb-2 {
     margin-bottom: 1.25rem;
+}
+
+.mb-2-5 {
+    margin-bottom: 1.75rem;
 }
 
 .mb-3 {
     margin-bottom: 2.5rem;
 }
 
+.mb-lg-3 {
+    @media screen and (min-width: 1063px) {
+        margin-bottom: 2.5rem;
+    }
+}
+
 .mb-4 {
     margin-bottom: 3.5rem;
+}
+
+.mb-lg-4 {
+    @media screen and (min-width: 1063px) {
+        margin-bottom: 3.5rem;
+    }
 }
 
 .mb-5 {
@@ -166,8 +214,24 @@
     margin-bottom: 5rem;
 }
 
+.mb-lg-6 {
+    @media screen and (min-width: 1063px) {
+        margin-bottom: 5rem;
+    }
+}
+
 .mb-7 {
     margin-bottom: 7.75rem;
+}
+
+.mb-lg-7 {
+    @media screen and (min-width: 1063px) {
+        margin-bottom: 7.75rem;
+    }
+}
+
+.px-0 {
+    padding-inline: 0;
 }
 
 .py-3 {
@@ -178,8 +242,18 @@
     padding-block: 4.125rem;
 }
 
+.pt-2-5 {
+    padding-top: 1.75rem;
+}
+
 .pt-8 {
     padding-top: 11.5625rem;
+}
+
+.pt-lg-8 {
+    @media screen and (min-width: 1063px) {
+        padding-top: 11.5625rem;
+    }
 }
 
 .fs-lg-5 {
@@ -192,12 +266,22 @@
     font-size: var(--h6-font-size);
 }
 
+.object-fit-contain {
+    object-fit: contain;
+}
+
 .text-start {
     text-align: left;
 }
 
 .text-center {
     text-align: center;
+}
+
+.text-lg-center {
+    @media screen and (min-width: 1063px) {
+        text-align: center;
+    }
 }
 
 .text-nowrap {
