--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -5,7 +5,8 @@
 :root {
     --color-white: #fff;
     --color-primary: #c598ff;
-    --body-font-size: 1.25rem;
+    --body-font-family: "Poppins", sans-serif;
+    --body-font-size: 1rem;
     --body-color: #444343;
     --body-bg: #fafaf0;
     --headings-font-family: "Poppins", sans-serif;
@@ -15,10 +16,11 @@
     --h3-font-size: 2.44375rem;
     --h4-font-size: 1.95625rem;
     --h5-font-size: 1.5625rem;
-    --btn-height: 3.5rem;
+    --btn-height: 2.75rem;
     --btn-padding-x: 1.25rem;
     --btn-padding-y: .5rem;
-    --btn-font-size: 1.25rem;
+    --btn-font-family: "Poppins", sans-serif;
+    --btn-font-size: 1rem;
     --btn-font-weight: 600;
     --btn-border-width: 0;
     --btn-border-color: transparent;
@@ -27,7 +29,7 @@
     --container-padding-x: 1.125rem;
     --container-max-width: 1540px;
     --input-padding-y: .75rem;
-    --input-font-size: 1.25rem;
+    --input-font-size: 1rem;
     --input-font-weight: 600;
     --input-color: inherit;
     --input-bg: transparent;
