--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -8,4 +8,12 @@
     @media screen and (min-width: 1063px) {
         padding-block: 5rem;
     }
+
+    .h5 {
+        font-size: .875;
+
+        @media screen and (min-width: 1063px) {
+            font-size: var(--h5-font-size);
+        }
+    }
 }
