--- a/src/scss/pages/_project.scss
+++ b/src/scss/pages/_project.scss
@@ -9,11 +9,26 @@
 .project-nav {
     box-shadow: -4px 3px 15px #00000025;
     z-index: 1000;
+    display: none;
+
+    @media screen and (min-width: 1063px) {
+        display: block;
+    }
 }
 
 .project-sango {
+    .navbar {
+        background: #7EB4F3;
+
+        @media screen and (min-width: 1063px) {
+            background-color: transparent;
+        }
+    }
+
     .header {
-        background: linear-gradient(180deg, rgba(126,180,243,1) 6%, rgba(237,228,244,1) 55%, rgba(250,250,240,1) 63%);
+        background: linear-gradient(180deg, #7EB4F3 6%, #EDE4F4 54.5%, #FAFAF0 63.1%);
+        padding-bottom: 1.75rem;
+        margin-bottom: 0;
     }
 }
 
@@ -48,12 +63,19 @@
 
 .findings {
     display: flex;
-    align-items: start;
-    column-gap: 5rem;
-    max-width: 1180px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 7.75rem;
+    flex-direction: column;
+    row-gap: 3rem;
+    margin-bottom: 3rem;
+
+    @media screen and (min-width: 1063px) {
+        align-items: start;
+        flex-direction: row;
+        column-gap: 5rem;
+        max-width: 1180px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 7.75rem;
+    }
 }
 
 .findings-item {
