--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -61,13 +61,18 @@ h2,
 
 h3,
 .h3 {
-    font-size: var(--h3-font-size);
-    line-height: 1.15;
+    font-size: 1.2rem;
+    line-height: 1.5;
+
+    @media screen and (min-width: 1063px) {
+        font-size: var(--h3-font-size);
+        line-height: 1.15;
+    }
 }
 
 h4,
 .h4 {
-    font-size: 1.5rem;
+    font-size: 1.125rem;
     line-height: 1.5;
 
     @media screen and (min-width: 1063px) {
@@ -78,7 +83,8 @@ h4,
 
 h5,
 .h5 {
-    font-size: 1.125rem;
+    margin-bottom: .5rem;
+    font-size: 1rem;
     line-height: 1.5;
 
     @media screen and (min-width: 1063px) {
