--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -108,6 +108,16 @@ strong {
     font-weight: 600;
 }
 
+ul,
+ol {
+    padding-left: var(--container-padding-x);
+    list-style-position: outside;
+
+    li:not(:last-child) {
+        margin-bottom: .5rem;
+    }
+}
+
 .list-unstyled {
     list-style: none;
 }
